infra/networking/cloudflare-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-tunnel
  namespace: mulesoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-tunnel
  template:
    metadata:
      labels:
        app: cloudflare-tunnel
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args: [
          "tunnel",
          "--no-autoupdate",
          "run",
          "--token",
          "$(TUNNEL_TOKEN)",
          "--url", "http://mule-eapi.mulesoft.svc:8081"
        ]
