infra/networking/mule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mule-ingress
  namespace: mulesoft
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mule-eapi
            port:
              number: 8081
